<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/green"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/RobotoBoldTextAppearance">


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:cardElevation="@dimen/space_3"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:layout_marginTop="@dimen/space_10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/order_id"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />


                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:id="@+id/tv_order_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ID"
                        android:textColor="#000"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="bold" />

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:id="@+id/tv_order_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingBottom="@dimen/space_8"
                        android:textColor="@color/green"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/place_on"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/text_size_small" />

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:id="@+id/tv_order_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:text="Date"
                        android:textColor="#000"
                        android:textSize="@dimen/text_size_small" />

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_7"
                        android:layout_weight=".3"
                        android:text="@string/time_t"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/text_size_small" />

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:id="@+id/tv_order_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_4"
                        android:layout_weight="1"
                        android:text="time"
                        android:textColor="#000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:text=""
                        android:textColor="@color/dark_gray" />

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:text=""
                        android:textColor="#000" />

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/space_9"
                        android:layout_weight=".6"
                        android:gravity="right"
                        android:text="@string/tt_t"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/text_size_small" />

                    <com.gogrocerdb.tccm.Fonts.LatoBLack
                        android:id="@+id/tv_order_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="T.Item"
                        android:textColor="#000" />
                </LinearLayout>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_8"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:layout_marginTop="@dimen/space_10">


                <com.gogrocerdb.tccm.Fonts.LatoBLack
                    android:id="@+id/tv_order_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="@string/pr"
                    android:textColor="#000"
                    android:textSize="@dimen/text_size_large" />

                <com.gogrocerdb.tccm.Fonts.LatoBLack
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:text=""
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:layout_marginTop="@dimen/space_14"
                android:orientation="horizontal">

                <com.gogrocerdb.tccm.Fonts.LatoBLack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracking_st"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_size_small" />

                <com.gogrocerdb.tccm.Fonts.LatoBLack
                    android:id="@+id/tracking_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:text="Date"
                    android:textColor="#000"
                    android:textSize="@dimen/text_size_small" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="210dp"
                android:layout_height="38dp"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:layout_marginTop="@dimen/space_14"
                android:background="@drawable/bg_rounded_button"
                android:padding="12dp">

                <com.gogrocerdb.tccm.Fonts.LatoBLack
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_small" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_18"
                android:background="@color/gray" />


            <RelativeLayout
                android:id="@+id/btn_mark_delivered"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="12dp"
                android:background="@drawable/bg_rounded_button"
                android:padding="12dp">

                <com.gogrocerdb.tccm.Fonts.LatoBLack
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/mark"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_normal" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/product_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>